RDCC-6547:Changes made to fix sonar issues